--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -48,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/spacer_2x"
         android:contentDescription="@string/simple_prev"
         android:translationY="-56dp"
         android:visibility="gone"
@@ -61,6 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/spacer_2x"
         android:contentDescription="@string/simple_next"
         android:visibility="gone"
         app:backgroundTint="@color/defaultBrand"
