--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,15 +3,20 @@
 
     <style name="BaseTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">?android:colorPrimary</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="colorControlNormal">?attr/colorAccent</item>
+
+        <item name="android:statusBarColor">?attr/colorPrimary</item>
+        <item name="android:windowLightStatusBar">@bool/isDayMode</item>
+        <item name="android:colorControlNormal">?attr/colorAccent</item>
+        <item name="android:colorControlActivated">?attr/colorAccent</item>
+        <item name="android:textColorLink">?android:colorAccent</item>
+        <item name="android:textColorHighlight">@color/defaultTextHighlightBackground</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="android:actionModeBackground">?attr/colorPrimary</item>
-        <item name="android:windowLightStatusBar">@bool/isDayMode</item>
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
-        <item name="android:textColorLink">?android:colorAccent</item>
 
         <item name="materialAlertDialogTheme">@style/MaterialAlertDialogTheme</item>
+
         <item name="actionModeStyle">@style/actionModeStyle</item>
         <item name="toolbarStyle">@style/toolbarStyle</item>
         <item name="tabStyle">@style/tabStyle</item>
