--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -24,10 +24,8 @@
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/spacer_activity_sides"
-                    android:layout_marginTop="@dimen/spacer_1hx"
-                    android:layout_marginEnd="@dimen/spacer_activity_sides"
-                    android:layout_marginBottom="@dimen/spacer_1hx"
+                    android:layout_marginHorizontal="@dimen/spacer_activity_sides"
+                    android:layout_marginVertical="@dimen/spacer_1hx"
                     app:cardBackgroundColor="@color/appbar"
                     app:cardCornerRadius="@dimen/spacer_4x"
                     app:cardElevation="2dp"
@@ -88,8 +86,7 @@
                     android:id="@+id/search_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/spacer_activity_sides"
-                    android:layout_marginEnd="@dimen/spacer_activity_sides"
+                    android:layout_marginHorizontal="@dimen/spacer_activity_sides"
                     android:visibility="gone"
                     app:contentInsetStartWithNavigation="0dp"
                     app:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
