--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -9,10 +9,8 @@
         android:id="@+id/single_note_widget_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingStart="@dimen/widget_inner_padding_horizontal"
-        android:paddingTop="@dimen/widget_inner_padding_vertical"
-        android:paddingEnd="@dimen/widget_inner_padding_horizontal"
-        android:paddingBottom="@dimen/widget_inner_padding_vertical"
+        android:paddingVertical="@dimen/widget_inner_padding_vertical"
+        android:paddingHorizontal="@dimen/widget_inner_padding_horizontal"
         tools:listitem="@layout/widget_single_note_content" />
 
     <TextView
