--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -16,8 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:layout_marginStart="@dimen/spacer_activity_sides"
-            android:layout_marginEnd="@dimen/spacer_activity_sides"
+            android:layout_marginHorizontal="@dimen/spacer_activity_sides"
             app:contentInsetStartWithNavigation="0dp"
             app:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
             app:titleMarginStart="0dp"
@@ -36,7 +35,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:paddingStart="@dimen/spacer_1x"
-        android:paddingEnd="@dimen/spacer_1x" />
+        android:paddingHorizontal="@dimen/spacer_1x" />
 
 </LinearLayout>
