--- a/app/src/main/res/layout/activity_formatting_help.xml
+++ b/app/src/main/res/layout/activity_formatting_help.xml
@@ -16,8 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:layout_marginStart="@dimen/spacer_activity_sides"
-            android:layout_marginEnd="@dimen/spacer_activity_sides"
+            android:layout_marginHorizontal="@dimen/spacer_activity_sides"
             app:contentInsetStartWithNavigation="0dp"
             app:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
             app:title="@string/action_formatting_help"
@@ -34,8 +33,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacer_activity_sides"
-            android:layout_marginEnd="@dimen/spacer_activity_sides"
+            android:layout_marginHorizontal="@dimen/spacer_activity_sides"
             android:orientation="vertical"
             android:padding="@dimen/spacer_2x">
 
