--- a/app/src/main/res/layout/dialog_exception.xml
+++ b/app/src/main/res/layout/dialog_exception.xml
@@ -31,8 +31,7 @@
             android:id="@+id/stacktrace"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/spacer_2x"
-            android:layout_marginBottom="@dimen/spacer_2x"
+            android:layout_marginVertical="@dimen/spacer_2x"
             android:layout_weight="1"
             android:background="@color/bg_highlighted"
             android:padding="@dimen/spacer_1x"
