--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -27,16 +27,13 @@
             android:id="@+id/editContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacer_activity_sides"
-            android:layout_marginEnd="@dimen/spacer_activity_sides"
+            android:layout_marginHorizontal="@dimen/spacer_activity_sides"
             android:background="?attr/colorPrimary"
             android:ems="10"
             android:gravity="top"
             android:inputType="textMultiLine|textCapSentences"
             android:lineSpacingMultiplier="@dimen/note_line_spacing"
             android:padding="@dimen/spacer_2x"
-            android:paddingStart="@dimen/spacer_2x"
-            android:paddingEnd="@dimen/spacer_2x"
             android:textColor="@color/fg_default"
             tools:text="@tools:sample/lorem/random" />
     </ScrollView>
