--- a/app/src/main/res/layout/fragment_note_preview.xml
+++ b/app/src/main/res/layout/fragment_note_preview.xml
@@ -24,12 +24,10 @@
                 android:id="@+id/single_note_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacer_activity_sides"
-                android:layout_marginEnd="@dimen/spacer_activity_sides"
+                android:layout_marginHorizontal="@dimen/spacer_activity_sides"
                 android:lineSpacingMultiplier="@dimen/note_line_spacing"
                 android:padding="@dimen/spacer_2x"
-                android:paddingStart="@dimen/spacer_2x"
-                android:paddingEnd="@dimen/spacer_2x"
+                android:paddingHorizontal="@dimen/spacer_2x"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/fg_default"
                 android:textIsSelectable="true"
