--- a/app/src/main/res/layout/item_account_choose.xml
+++ b/app/src/main/res/layout/item_account_choose.xml
@@ -8,8 +8,7 @@
     android:gravity="center"
     android:orientation="horizontal"
     android:padding="@dimen/spacer_2x"
-    android:paddingStart="@dimen/spacer_1x"
-    android:paddingEnd="@dimen/spacer_1x">
+    android:paddingHorizontal="@dimen/spacer_1x">
 
     <FrameLayout
         android:layout_width="wrap_content"
