--- a/app/src/main/res/layout/item_notes_list_note_item_without_excerpt.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_without_excerpt.xml
@@ -63,13 +63,11 @@
             android:id="@+id/noteTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"
+            android:layout_marginVertical="10sp"
             android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingTop="@dimen/spacer_2x"
-            android:paddingBottom="@dimen/spacer_2x"
+            android:paddingVertical="@dimen/spacer_2x"
             android:textColor="?android:textColorPrimary"
             android:textSize="@dimen/primary_font_size"
             tools:text="@tools:sample/lorem/random" />
@@ -83,8 +81,7 @@
             android:layout_marginEnd="@dimen/spacer_2x"
             android:background="@drawable/border"
             android:maxLines="1"
-            android:paddingStart="@dimen/spacer_1x"
-            android:paddingEnd="@dimen/spacer_1x"
+            android:paddingHorizontal="@dimen/spacer_1x"
             android:paddingBottom="1dp"
             android:singleLine="true"
             android:textColor="?android:textColorPrimary"
