--- a/app/src/main/res/layout/item_tip.xml
+++ b/app/src/main/res/layout/item_tip.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="@dimen/spacer_1x"
-    android:paddingBottom="@dimen/spacer_1x">
+    android:paddingVertical="@dimen/spacer_1x">
 
     <TextView
         android:id="@+id/tip"
