--- a/app/src/main/res/layout/widget_entry.xml
+++ b/app/src/main/res/layout/widget_entry.xml
@@ -6,10 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingTop="@dimen/spacer_1x"
+    android:paddingVertical="@dimen/spacer_1x"
     android:paddingStart="@null"
-    android:paddingEnd="@dimen/spacer_1hx"
-    android:paddingBottom="@dimen/spacer_1x">
+    android:paddingEnd="@dimen/spacer_1hx">
 
     <ImageView
         android:id="@+id/widget_entry_fav_icon"
