--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,26 @@
 
     <style name="AppTheme" parent="BaseTheme" />
 
+    <style name="PopUpDarkMenu" parent="Theme.Material3.DayNight">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">?android:colorPrimary</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="checkboxStyle">@style/checkboxStyle</item>
+    </style>
+
+    <style name="checkboxStyle" parent="Widget.Material3.CompoundButton.CheckBox">
+        <item name="materialThemeOverlay">@style/materialThemeOverlay</item>
+    </style>
+
+    <style name="materialThemeOverlay" parent="Widget.Material3.CompoundButton.CheckBox">
+        <!-- Container colors -->
+        <item name="colorPrimary">@color/accent</item>
+        <item name="colorOnSurface">@color/accent</item>
+        <!-- Icon colors -->
+        <item name="colorSurface">@color/primary</item>
+        <item name="colorOnPrimary">@color/primary</item>
+    </style>
+
     <style name="actionModeStyle" parent="@style/Widget.Material3.ActionMode">
         <item name="android:paddingStart">@dimen/spacer_activity_sides</item>
         <item name="android:paddingEnd">@dimen/spacer_activity_sides</item>
