--- a/app/src/main/res/layout/fragment_about_credits_tab.xml
+++ b/app/src/main/res/layout/fragment_about_credits_tab.xml
@@ -56,6 +56,7 @@
             android:text="@string/about_developers_title" />
 
         <TextView
+            android:id="@+id/about_developers"
             style="?android:attr/editTextPreferenceStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
