wip: allow switching between the three note opening modes in preferences
Signed-off-by: Álvaro Brey <alvaro.brey@nextcloud.com>

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,7 @@
     <string-array name="noteMode_values">
         <item>@string/pref_value_mode_edit</item>
         <item>@string/pref_value_mode_preview</item>
+        <item>@string/pref_value_mode_direct_edit</item>
         <item>@string/pref_value_mode_last</item>
     </string-array>
     <string-array name="fontSize_values">
