--- a/app/src/main/res/layout/fragment_note_direct_edit.xml
+++ b/app/src/main/res/layout/fragment_note_direct_edit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
@@ -8,7 +9,8 @@
         android:visibility="gone"
         android:id="@+id/note_webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/progress"
@@ -19,5 +21,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--    TODO FABs? Search?-->
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/plain_editing_fab"
+        style="?attr/floatingActionButtonPrimaryStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/spacer_2x"
+        android:contentDescription="@string/noteMode_plain_edit"
+        android:text="@string/noteMode_plain_edit"
+        android:visibility="gone"
+        app:backgroundTint="@color/defaultBrand"
+        app:icon="@drawable/ic_notes"
+        app:layout_anchor="@id/note_webview"
+        app:layout_anchorGravity="bottom|end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
