feat(theming): Align theming closer to files app
Follow-Up to https://github.com/nextcloud/notes-android/pull/1680

Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="android:textColorLink">?android:colorAccent</item>
         <item name="android:textColorHighlight">@color/defaultTextHighlightBackground</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="android:windowBackground">@color/bg_default</item>
         <item name="android:actionModeBackground">?attr/colorPrimary</item>
 
         <!-- Workaround: Preferences Dialogs are using AlertDialogs instead of MaterialAlertDialogs. -->
