feat(theming): Align theming closer to files app
Follow-Up to https://github.com/nextcloud/notes-android/pull/1680

Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/app/src/main/res/layout/activity_formatting_help.xml
+++ b/app/src/main/res/layout/activity_formatting_help.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
-        app:title="@string/action_formatting_help"
-        app:titleMarginStart="0dp" />
+        app:title="@string/action_formatting_help" />
 
     <ScrollView
         android:id="@+id/scrollView"
