--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
-        app:title="@string/action_settings"
-        app:titleMarginStart="0dp" />
+        app:title="@string/action_settings" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_view"
