fix(theming): Fix category theming
Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/app/src/main/res/layout/item_notes_list_note_item_grid.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_grid.xml
@@ -93,7 +93,7 @@
                     app:chipEndPadding="@dimen/spacer_1x"
                     app:chipMinHeight="0dp"
                     app:chipStartPadding="@dimen/spacer_1x"
-                    app:chipStrokeColor="@color/defaultBrand"
+                    app:chipStrokeColor="@android:color/transparent"
                     app:chipStrokeWidth="1dp"
                     app:ensureMinTouchTargetSize="false"
                     app:textEndPadding="0dp"
