feat(theming): Reduce dependence on colorPrimary
Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -16,7 +16,6 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/colorPrimary" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
