--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:background="?attr/colorPrimary">
+    android:layout_height="match_parent">
 
     <!-- Dummy item to prevent editContent from receiving focus -->
     <LinearLayout
@@ -28,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/spacer_activity_sides"
-            android:background="?attr/colorPrimary"
+            android:background="@android:color/transparent"
             android:ems="10"
             android:gravity="top"
             android:inputType="textMultiLine|textCapSentences"
