v rough. new markdown-free controls, monospace font. hard-coded

--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -22,7 +22,7 @@
         android:orientation="vertical"
         tools:context="it.niedermann.owncloud.notes.edit.EditNoteActivity">
 
-        <it.niedermann.android.markdown.MarkdownEditorImpl
+        <it.niedermann.owncloud.notes.edit.PlainTextEditorImpl
             android:id="@+id/editContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
